--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: addnab/docker-run-action@v3
         with:
           image: squidfunk/mkdocs-material:8.3.9
-          # options: -v ${{ github.workspace }}:/docs
+          options: -v ${{ github.workspace }}:/docs
           run: |
             echo "Building docs"
             mkdocs build --clean -v
