updating action run on pr to main

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 name: Ayam Secure Docs CI
 
 on:
-  push:
-    branches: [dev]
+  # push:
+  #   branches: [dev]
   pull_request:
     branches: [main]
 
